Use Integer.valueOf()